<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/ivAppIcon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/app_name"
        android:id="@+id/tvAppName"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_version_text"
        android:textColor="@color/colorSecondaryText"
        android:id="@+id/tvVersion"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_about_text"
        android:textColor="@color/colorPrimaryText"
        android:id="@+id/tvAbout"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_email_text"
        android:textColor="@color/colorPrimaryText"
        android:id="@+id/tvEmail"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="emailClick" />

</LinearLayout>