<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="false"
    tools:context="com.yennefer.estatefinder.gui.AdvertActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/vfPhoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="5dp"
            android:id="@+id/tvTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="8dp"
            android:id="@+id/tvPrice" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:id="@+id/llLocation"
            android:onClick="openMapClick">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="3dp"
                android:id="@+id/ivLocation"
                android:src="@drawable/ic_action_location" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/tvAddress"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/llParams" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/tvDescription"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:id="@+id/llCall"
            android:onClick="makeCallClick">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageView2"
                android:src="@drawable/ic_action_call" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorSecondaryText"
                android:id="@+id/tvPhoneNumber" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:onClick="openBrowserClick">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_action_browser" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/text_open_in_browser"
                android:id="@+id/textView2" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/text_like"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle">
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_like_label"
                 android:id="@+id/btnLike"
                 android:layout_weight="1"
                 android:onClick="evalClick"
                 style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_dislike_label"
                android:id="@+id/btnDislike"
                android:layout_weight="1"
                android:onClick="evalClick"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
